Fix z-index also for clicked column/row

--- a/trunk/admin/css/minicomposer-admin.css
+++ b/trunk/admin/css/minicomposer-admin.css
@@ -385,6 +385,7 @@
 .has-editor-open,
 .has-contextmenu {
   outline: 2px dotted blueviolet;
+  z-index: 120 !important;
 }
 
 .minicomposer-info:before {
